Bug 380333 - Right click - Group and Menu - View - Group do not match
Summary: Right click - Group and Menu - View - Group do not match
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Albums-ItemsGroup (other bugs)
Version First Reported In: 5.6.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-05-29 23:01 UTC by Andrius
Modified: 2017-09-14 16:42 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrius 2017-05-29 23:01:20 UTC
Subject.
Right click - Group has:
Group selected Here
Group selected by Time
Group selected by Filename
Show Grouped images
Hide Grouped images
Remove selected from groups
Ungroup selected

while Menu - View - Group has:
Flat list
by Album
by Format

Shouldn't they match?
Comment 1 Simon 2017-05-30 06:42:05 UTC
No, these are two different settings which are unfortunately (I assume inadvertently) named the same way. This discussion started earlier, but never really came to a conclusion.

The main menu View -> Group Images sets the structure of the entire list of images, whether there is none or there should be separators between albums or file types. The "grouping functionality" accessible true the context menu binds selected images together (potentially hiding them).

My proposal is to rename the following entries in the main "View" menu:

    "Sort Images" -> "Sort Items"
    "Group Images" -> "Arrange Items"
    "Group Sorting Order" -> "Arrangement Order" (or "Arrange Sort Order", but that doesn't sound like correct English to me).

I want to replace image with item for consistency, as the main menu is called item already. And as we handle also video, it makes sense to use a more general term.
Comment 2 Andrius 2017-05-30 15:50:37 UTC
(In reply to Simon from comment #1)
> No, these are two different settings which are unfortunately (I assume
> inadvertently) named the same way. This discussion started earlier, but
> never really came to a conclusion.
> 
> The main menu View -> Group Images sets the structure of the entire list of
> images, whether there is none or there should be separators between albums
> or file types. The "grouping functionality" accessible true the context menu
> binds selected images together (potentially hiding them).
> 
> My proposal is to rename the following entries in the main "View" menu:
> 
>     "Sort Images" -> "Sort Items"
>     "Group Images" -> "Arrange Items"
>     "Group Sorting Order" -> "Arrangement Order" (or "Arrange Sort Order",
> but that doesn't sound like correct English to me).
> 
> I want to replace image with item for consistency, as the main menu is
> called item already. And as we handle also video, it makes sense to use a
> more general term.

Yeah how to name menu entries is always a tough question.
Maybe:

Thumbnails View mode
                     Flat list
                     Group by Album
                     Group by File Format
Comment 3 Andrius 2017-05-30 15:54:15 UTC
Menubar - "Item" applies only to selected items, correct?
Maybe we should have this there too?
Group
    Group selected Here
    Group selected by Time
    Group selected by Filename
    Show Grouped images
    Hide Grouped images
    Remove selected from groups
    Ungroup selected

I just think the right click menu should just represent some of the menubar entries and do not have any entries that are unique for the right click menu.
Just an idea.
Comment 4 Simon 2017-05-30 16:05:17 UTC
Yes, the Item menu applies to selected items and I agree on having the grouping controls there too. Except for show/hide grouped images, because those depend on the current view mode (different in table versus thumbnails view).

I don't like "Thumbnails View mode" for several reasons (sorry, just want to state arguments, nothing personal): It does not apply solely to the Thumbnails View (which IMO should be called Icon or Grid View) and it is about adding a structure to the displayed items, not about how thumbnails are viewed.

One point: Lets restrict the discussion in this issue to whether and how to rename the "View" -> "Group Images" menu items. Not that the rest isn't important, but it enhances the chances of reaching a decision, as the discussion is easier to follow.
Comment 5 Simon 2017-09-14 16:42:57 UTC
Git commit 99e56fc6c7da0ec9ccea674777d6d3e2fef335a9 by Simon Frei.
Committed on 14/09/2017 at 16:42.
Pushed by sfrei into branch 'master'.

In main view rename Group to Separate to avoid collision with grouping feature
FIXED-IN: 5.8.0

M  +2    -1    NEWS
M  +2    -2    app/items/digikamimageview.cpp
M  +29   -29   app/main/digikamapp.cpp
M  +4    -4    app/main/digikamapp_p.h
M  +4    -4    app/main/digikamui5.rc
M  +4    -4    app/views/digikamview.cpp
M  +2    -2    app/views/digikamview.h
M  +7    -7    libs/settings/applicationsettings.cpp
M  +4    -4    libs/settings/applicationsettings.h
M  +8    -8    libs/settings/applicationsettings_iconview.cpp
M  +7    -7    libs/settings/applicationsettings_p.cpp
M  +5    -5    libs/settings/applicationsettings_p.h
M  +11   -11   utilities/importui/main/importsettings.cpp
M  +2    -2    utilities/importui/main/importsettings.h
M  +12   -12   utilities/importui/main/importui.cpp
M  +2    -2    utilities/importui/views/importview.cpp
M  +1    -1    utilities/importui/views/importview.h

https://commits.kde.org/digikam/99e56fc6c7da0ec9ccea674777d6d3e2fef335a9