In main view rename Group to Separate to avoid collision with grouping feature

BUG: 380333
FIXED-IN: 5.8.0