libs/settings/applicationsettings.h
@@ -207,11 +207,11 @@ public:
     void setImageSorting(int sorting);
     int  getImageSorting() const;
 
-    void setImageGroupMode(int mode);
-    int  getImageGroupMode() const;
+    void setImageSeparationMode(int mode);
+    int  getImageSeparationMode() const;
 
-    void setImageGroupSortOrder(int order);
-    int  getImageGroupSortOrder() const;
+    void setImageSeparationSortOrder(int order);
+    int  getImageSeparationSortOrder() const;
 
     void setItemLeftClickAction(const ItemLeftClickAction action);
     ItemLeftClickAction getItemLeftClickAction() const;
